--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dolphin-id-web-2",
+  "name": "dolphin-id-web-js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-region-select": "^2.3.0",
+    "react-scripts": "3.3.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
