--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-region-select": "^2.3.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "typescript": "^3.7.4"
   },
