--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-file-manager": "^1.2.4",
     "react-redux": "^7.2.0",
     "react-region-select": "^2.3.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "typescript": "^3.7.4"
   },
   "scripts": {
@@ -35,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^14.10.1"
   }
 }
