--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
