--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -17,6 +18,8 @@
     "react-file-manager": "^1.2.4",
     "react-redux": "^7.2.0",
     "react-region-select": "^2.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.10.1"
+    "@types/node": "^14.10.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
