--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-file-manager": "^1.2.4",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
     "react-region-select": "^2.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "redux-saga": "^1.1.3",
     "typescript": "^3.7.4",
     "uuid": "^8.3.1"
