--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "konva": "^7.2.5",
     "nanoid": "^3.1.20",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
     "react-dev-utils": "^10.0.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.1",
     "react-file-manager": "^1.2.4",
+    "react-konva": "^17.0.1-3",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
     "react-region-select": "^2.3.0",
@@ -27,6 +29,7 @@
     "redux-observable": "^1.2.0",
     "redux-saga": "^1.1.3",
     "typescript": "^3.7.4",
+    "use-image": "^1.0.7",
     "uuid": "^8.3.1"
   },
   "scripts": {
